testdata/baselines/reference/submodule/conformance/moduleExportAlias2.errors.txt
index.js(2,19): error TS2307: Cannot find module './semver' or its corresponding type declarations.


==== index.js (1 errors) ====
    /// <reference path='node.d.ts' />
    const C = require("./semver")
                      ~~~~~~~~~~
!!! error TS2307: Cannot find module './semver' or its corresponding type declarations.
    var two = C.f(1)
    var c = new C
    
==== node.d.ts (0 errors) ====
    declare function require(name: string): any;
    declare var exports: any;
    declare var module: { exports: any };
==== semver.js (0 errors) ====
    /// <reference path='node.d.ts' />
    exports = module.exports = C
    exports.f = n => n + 1
    function C() {
        this.p = 1
    }